2013-03-05  Roland Levillain  <roland@lrde.epita.fr>

	Remove morpho::meyer_wst.

	* mln/morpho/meyer_wst.hh: Remove.
	Superseded by mln/morpho/watershed/flooding.hh.
	* headers.mk,
	* tests/unit_test/unit-tests.mk:
	Regen
	* tests/morpho/meyer_wst.cc,
	* tests/morpho/meyer_wst_long.cc:
	Remove tests.
	* tests/morpho/Makefile.am (check_PROGRAMS): Remove
	meyer_wst.cc and meyer_wst_long.cc.
	(meyer_wst_long_CXXFLAGS): Remove.
	(MOSTLYCLEANFILES): Adjust.

2013-03-05  Roland Levillain  <roland@lrde.epita.fr>

	Replace remaining uses of morpho::meyer_wst in Milena.

	* doc/examples/trash/tuto_bis.cc,
	* doc/examples/trash/tuto_one.cc,
	* tools/area_flooding.cc:
	Here, by morpho::watershed::flooding.

2012-07-19  Roland Levillain  <roland@lrde.epita.fr>

	Remove references to mln/morpho/meyer_wst.hh in mln/morpho/.

	* mln/morpho/all.hh,
	* mln/morpho/essential.hh:
	Here.

2011-10-06  Roland Levillain  <roland@lrde.epita.fr>

	Replace uses morpho::meyer_wst by morpho::watershed::flooding.

	* apps/mesh-segm-skel/mesh-complex-max-curv-segm.cc,
	* apps/mesh-segm-skel/mesh-complex-segm.cc:
	Here.
	* tests/morpho/artificial_line_graph_image_wst.cc,
	* tests/morpho/graph_image_wst.cc,
	* tests/morpho/lena_line_graph_image_wst1.cc,
	* tests/morpho/lena_line_graph_image_wst2.cc:
	Likewise.
	Tidy headers inclusions.
	* mln/make/region_adjacency_graph.hh: Adjust documentation.
	* tests/morpho/graph_image_morpho.cc: Add a comment.

2011-10-06  Roland Levillain  <roland@lrde.epita.fr>

	Fix tests/core/image/line_graph_image.cc.

	* tests/core/image/line_graph_image.cc: Actually use an image
	based on the edges of a graph, not on its vertices.
	Adjust test.
	Aesthetic changes.
	* tests/core/image/edge_image.cc: Aesthetic changes.

2011-10-06  Roland Levillain  <roland@lrde.epita.fr>

	Use mln::edge_image to implement line graph images in morpho tests.

	* tests/morpho/line_graph_image_morpho.cc,
	* tests/morpho/line_graph_image_wst.cc: